style page and Saving in PDF

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
 </head>
 <body>
-    <div>
-    <h2>Selecione quais Sobremesas quer Orçar o Material </h2>
+    <div id="divPageInitial">
+    <h1>Selecione a Sobremesa para ver a receita </h1>
     <br>
     
     <a id="pageBrowniePage" href="pageBrownie.html">
@@ -33,4 +33,4 @@
 
     <script src="javaScript.js"></script>
     </body>
-</html>
+</html> 
